--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: github
-  repo: peippo/aurafienti
+  repo: JariKorelin/aurafienti
 
 media_folder: static/assets
 public_folder: assets
